--- a/.drone.yml
+++ b/.drone.yml
@@ -1,3 +1,13 @@
-image: node
-script:
-  -echo "Build is Complete!"
+pipeline:
+  test:
+    image: node
+    commands:
+    - sleep 10 # gives the database enough time to initialize
+    - echo "Build test"
+
+  services:
+  database:
+  image: postgres:9.4.5
+  environment:
+  - POSTGRES_USER=postgres
+  - POSTGRES_DB=test
