--- a/wercker.yml
+++ b/wercker.yml
@@ -34,3 +34,24 @@ build:
         code: |
           echo "node version $(node -v) running"
           echo "npm version $(npm -v) running"
+
+test-1:
+  steps:
+    -script:
+      name: echo name
+        code: |
+          echo "Eddy"
+
+test-2:
+  steps:
+    -script:
+      name: echo name 2
+        code: |
+          echo "Eddy 2"
+
+test-3:
+  steps:
+    -script:
+      name: echo name 3
+        code: |
+          echo "Eddy 3"
